Add basic input-output support
